MangoBajito/tests/Lenguajes_II/Operacion/errors/17-menor_igual.mng
# Test 17: Errores de operador menor igual (peluche)
se_prende(){
	culito n6 : tas_claro = 3 peluche 'h';
	culito n7 : tas_claro = 3 peluche "hola";
	culito n8 : tas_claro = 3 peluche Sisa;
	
	culito n13 : tas_claro = 3.2 peluche 'h';
	culito n14 : tas_claro = 3.2 peluche "hola";
	culito n15 : tas_claro = 3.2 peluche Sisa;
	
	culito n18 : tas_claro = 0.032e+2 peluche 'h';
	culito n19 : tas_claro = 0.032e+2 peluche "hola";
	culito n20 : tas_claro = 0.032e+2 peluche Sisa;
	
	culito n22 : tas_claro = 'h' peluche "hola";
	culito n23 : tas_claro = 'h' peluche Sisa;

	culito n25 : tas_claro = "hola" peluche Sisa;

	culito n26 : tas_claro = Sisa peluche Sisa;
	culito n27 : tas_claro = Sisa peluche Nolsa;
};